{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 59,
  "lineage": "3d47a183-0aca-fb84-984e-311f8f5a5f50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987199941948:network-acl/acl-065eaa04b9ccee849",
            "default_network_acl_id": "acl-065eaa04b9ccee849",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-065eaa04b9ccee849",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "987199941948",
            "subnet_ids": [
              "subnet-00e0a0809054f21a1",
              "subnet-07f82aa7414a82066"
            ],
            "tags": {
              "Name": "terraform-huggingface-lambda-default-default-network-acl"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-default-default-network-acl"
            },
            "vpc_id": "vpc-0938d4564b4d7d531"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "aws_subnet.subnet_private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987199941948:security-group/sg-019effe4849f2a0df",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019effe4849f2a0df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "987199941948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-huggingface-lambda-default-security-group"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-default-security-group"
            },
            "vpc_id": "vpc-0938d4564b4d7d531"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd674c70a2135ca0",
            "association_id": "eipassoc-0a5678538a356c04f",
            "domain": "vpc",
            "id": "eipalloc-0bd674c70a2135ca0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05c1584b26fa176a5",
            "private_dns": "ip-10-0-2-107.ec2.internal",
            "private_ip": "10.0.2.107",
            "public_dns": "ec2-18-235-150-195.compute-1.amazonaws.com",
            "public_ip": "18.235.150.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-huggingface-lambda-eip"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987199941948:internet-gateway/igw-07f94aca964dd5e5c",
            "id": "igw-07f94aca964dd5e5c",
            "owner_id": "987199941948",
            "tags": {
              "Name": "terraform-huggingface-lambda-internet-gateway"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-internet-gateway"
            },
            "vpc_id": "vpc-0938d4564b4d7d531"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd674c70a2135ca0",
            "connectivity_type": "public",
            "id": "nat-0b8687559a400f73a",
            "network_interface_id": "eni-05c1584b26fa176a5",
            "private_ip": "10.0.2.107",
            "public_ip": "18.235.150.195",
            "subnet_id": "subnet-07f82aa7414a82066",
            "tags": {
              "Name": "terraform-huggingface-lambda-nat-gateway"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987199941948:route-table/rtb-0e649fac95e90be11",
            "id": "rtb-0e649fac95e90be11",
            "owner_id": "987199941948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b8687559a400f73a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-huggingface-lambda-private-route-table"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0938d4564b4d7d531"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987199941948:route-table/rtb-0a22a7e637848c7ff",
            "id": "rtb-0a22a7e637848c7ff",
            "owner_id": "987199941948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f94aca964dd5e5c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-huggingface-lambda-public-route-table"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0938d4564b4d7d531"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dfb9c1e761e4606",
            "route_table_id": "rtb-0e649fac95e90be11",
            "subnet_id": "subnet-00e0a0809054f21a1"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.subnet_private",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a04f0ce65132850c",
            "route_table_id": "rtb-0a22a7e637848c7ff",
            "subnet_id": "subnet-07f82aa7414a82066"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc",
            "aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987199941948:subnet/subnet-00e0a0809054f21a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e0a0809054f21a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987199941948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-huggingface-lambda-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-private-subnet"
            },
            "vpc_id": "vpc-0938d4564b4d7d531"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987199941948:subnet/subnet-07f82aa7414a82066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f82aa7414a82066",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987199941948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-huggingface-lambda-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-public-subnet"
            },
            "vpc_id": "vpc-0938d4564b4d7d531"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987199941948:vpc/vpc-0938d4564b4d7d531",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065eaa04b9ccee849",
            "default_route_table_id": "rtb-0a1ab0b8dab3e2ac2",
            "default_security_group_id": "sg-019effe4849f2a0df",
            "dhcp_options_id": "dopt-0edb17cb5db4a507a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0938d4564b4d7d531",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a1ab0b8dab3e2ac2",
            "owner_id": "987199941948",
            "tags": {
              "Name": "terraform-huggingface-lambda-vpc"
            },
            "tags_all": {
              "Name": "terraform-huggingface-lambda-vpc"
            }
          }
        }
      ]
    }
  ]
}